<resources>
    <string name="app_name">My Heritage QR</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Home_Heading">Book your meeting with culture</string>
    <string name="place_input">Enter Place</string>
    <string name="date_input">Select Date</string>
    <string name="button_availability">Check Availability</string>
    <string name="available_ticket_text">Available Ticket :</string>
    <string name="book_now_text">Book now</string>
    <string name="total_ticket">Total number of Tickets</string>
    <string name="ticket_range">Between 1-20</string>
    <string name="btn_proceed_to_book">Proceed To Book</string>
    <string name="Terms_and_conditions">Warning : Booked Ticket cannot be cancelled . By clicking \"Pay\" I hereby , declare that i have read all the terms and conditions and accept all the Terms and Conditions of My Heritage QR .</string>
    <string name="btn_pay">Pay</string>
    <string name="platform_charge">Platform Charge</string>
    <string name="total_cost">Total Cost</string>
    <string name="ticket_cost_summary">Ticket cost summary</string>
    <string name="ticket_fare_for_adult">Ticket fare for adult</string>
    <string name="home">Home</string>
    <string name="my_bookings">Bookings</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="OpenDrawer">Open Navigation drawer</string>
    <string name="CloseDrawer">Close Navigation drawer</string>
    <string name="user_image">User Image</string>
    <string name="vikas_02k02_gmail_com">vikas.02k02@gmail.com</string>
    <string name="current_password">Current Password:</string>
    <string name="vikas_kumar">Vikas Kumar</string>
    <string name="connect_us_on">Connect Us on</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="gmail">Gmail</string>
    <string name="copyright_u00a9_2023_vikas02k02">Copyright © 2023 -vikas02k02</string>
    <string name="please_rate_us_to_improve_your_experience">Please rate us to improve your experience</string>
    <string name="submit">Submit</string>
    <string name="about_us">ABOUT US</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="pause_all">Pause All</string>

</resources>