<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".F_home">

        <TextView
            android:id="@+id/creative_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/Home_Heading"
            android:textColor="#FF00FF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/ac_place"
        android:layout_width="330dp"
        android:layout_height="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/baseline_find_replace_24"
        android:drawablePadding="10dp"
        android:hint="@string/place_input"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creative_heading"
        app:layout_constraintVertical_bias="0.037" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/lt_calender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_date"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:drawableEnd="@drawable/baseline_calendar_month_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/date_input"
                    android:textColor="@color/red"
                    android:textColorHint="#FFD180" />

            </FrameLayout>


            <Button
                android:id="@+id/btn_availability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/white"
                android:layout_gravity="right"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="30dp"
                android:text="@string/button_availability"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:gravity="center"
                android:text="@string/available_ticket_text"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/tv_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#DC5F39"
            android:gravity="center"
            android:text="@string/book_now_text"
            android:textColor="#311B92"
            android:textSize="34sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/total_ticket"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_passenger"
            android:layout_width="123dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:hint="@string/ticket_range"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="#78909C"
            android:textStyle="bold"
            android:importantForAutofill="no" />

    </LinearLayout>


        <Button
            android:id="@+id/btn_proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="60dp"
            android:text="@string/btn_proceed_to_book"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />

<FrameLayout
    android:id="@+id/lt_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
</FrameLayout>



</LinearLayout>

