<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="269dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="55dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_image"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:digits="0123456789qwertyuiopasdfghjklzxcvbnm_"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="30dp"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#FF4081"
            android:text="@string/login"
            android:textColor="#212121"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textColor="#D81B60" />
    </LinearLayout>
</RelativeLayout>
