<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".F_changePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="#E8BE7F"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginStart="20dp"
            android:src="@drawable/pic"
            android:contentDescription="@string/user_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/vikas_02k02_gmail_com"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/current_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_currentPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="xyz1234"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxHeight="49dp"
            android:textColor="@color/black"
            android:textColorHint="#0277BD"
            tools:ignore="HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="New Password:"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/et_newPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="abcd1234"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxHeight="49dp"
            android:textColor="@color/black"
            android:textColorHint="#0277BD"
            tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Confirm Password:"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:textColor="@color/black"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/et_confirmPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="abcd1234"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxHeight="49dp"
            android:textColor="@color/black"
            android:textColorHint="#0277BD"
            tools:ignore="HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_changePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Change Password"
        tools:ignore="HardcodedText" />

</LinearLayout>